--- a/catalog.html
+++ b/catalog.html
@@ -2,11 +2,11 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
+    <title>HTML Academy: Каталог</title>
   </head>
   <body>
     <head>
-       <a href="#">
+       <a href="index.html">
          <img src="img/logo.png" alt="Логотип магазина">
        </a>
        <div>
@@ -30,31 +30,50 @@
     </head>
     <main>
       <section>
-        <h2>О нас</h2>
-        <p>
-          Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
-        </p>
-        <p> 
-            Мы можем доставить ваш товар в самые отдаленные точки России! DEVICE работает со многими транспортными компаниями:
-        </p>
-        <ul>
-          <li>Деловые Линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <button type="button">подробнее о нас</button>
-      </section>
-      <section>
-        <h2>Контакты</h2>
-        <p>
-          Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
-        </p>
-        <img src="img/map.png" alt="Схема проезда">
-        <button type="button">напишите нам</button> 
+        <div>
+          <h2>Фильтры</h2>
+          <h3>Цвет</h3>
+          <ul>
+            <li>Черный</li>
+            <li>Белый</li>
+            <li>Синий</li>
+            <li>Красный</li>
+            <li>Розовый</li>
+          </ul>
+          <h3>Bluetooth</h3>
+          <ul>
+            <li>Есть</li>
+            <li>Нет</li>
+          </ul>
+          <button type="button">показать</button>
+        </div>
+        <div>
+          <h2>Каталог товаров</h2>
+          <ul>
+            <li>
+              <h3>Любительская селфи-палка</h3>
+              <span>500 руб.</span>
+            </li>
+            <li>
+              <h3>Профессиональная селфи-палка</h3>
+              <span>1500 руб.</span>
+            </li>
+            <li>
+              <h3>Непотопляемая селфи-палка</h3>
+              <span>2500 руб.</span>
+            </li>
+            <li>
+              <h3>Селфи-палка «Следуй за мной»</h3>
+              <span>4900 руб.</span>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer>
-      <img src="img/logo2.png" alt="логотип магазина">
+       <a href="index.html" >
+         <img src="img/logo2.png" alt="логотип магазина">
+       </a>
       <ul>
          <li>Войти</li>
        </ul>
