--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Каталог</title>
   </head>
   <body>
-    <head>
+    <header>
        <a href="index.html">
          <img src="img/logo.png" alt="Логотип магазина">
        </a>
@@ -27,9 +27,21 @@
            <li>контакты</li>
          </ul>
        </nav>
-    </head>
+    </header>
     <main>
       <section>
+        <h1>Моноподы для селфи</h1>
+        <ul>
+          <li>
+            <a href="index.html">Главная</a>
+          </li>
+          <li>
+            <a href="#">Каталог</a>
+          </li>
+          <li>
+            <a href="#">Моноподы для селфи</a>
+          </li>
+        </ul>
         <div>
           <h2>Фильтры</h2>
           <h3>Цвет</h3>
@@ -51,18 +63,22 @@
           <h2>Каталог товаров</h2>
           <ul>
             <li>
+              <img src="product1.jpg" alt="фото товара">
               <h3>Любительская селфи-палка</h3>
               <span>500 руб.</span>
             </li>
             <li>
+              <img src="product2.jpg" alt="фото товара">
               <h3>Профессиональная селфи-палка</h3>
               <span>1500 руб.</span>
             </li>
             <li>
+              <img src="product3.jpg" alt="фото товара">
               <h3>Непотопляемая селфи-палка</h3>
               <span>2500 руб.</span>
             </li>
             <li>
+              <img src="product4.jpg" alt="фото товара">
               <h3>Селфи-палка «Следуй за мной»</h3>
               <span>4900 руб.</span>
             </li>
