--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Девайс</title>
   </head>
   <body>
-    <head>
+    <header>
        <a href="#">
          <img src="img/logo.png" alt="Логотип магазина">
        </a>
@@ -27,7 +27,7 @@
            <li>контакты</li>
          </ul>
        </nav>
-    </head>
+    </header>
     <main>
       <section>
         <h2>О нас</h2>
