--- a/catalog.html
+++ b/catalog.html
@@ -3,194 +3,250 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Каталог</title>
+    <link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+  </head>
   </head>
   <body>
-    <header>
+    <header class="header">
       <a href="#">
         <img src="img/logo.png" width="163px" height="35px" alt="Логотип магазина">
       </a>
-      <div>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
-          <path d="M15.7,14.3l-3.104-3.104C13.473,10.023,14,8.576,14,7c0-3.866-3.134-7-7-7S0,3.134,0,7s3.134,7,7,7
-          c1.576,0,3.023-0.527,4.193-1.404L14.3,15.7c0.185,0.184,0.38,0.3,0.7,0.3c0.553,0,1-0.447,1-1C16,14.781,15.945,14.546,15.7,14.3z
-          M2,7c0-2.762,2.238-5,5-5s5,2.238,5,5s-2.238,5-5,5S2,9.762,2,7z"/>
-        </svg>
-        Поиск по сайту
-      </div>
-      <ul>
+      <form class="search" aria-label="Поиск по сайту">
+        <label>
+           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+           width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+           <path d="M15.7,14.3l-3.104-3.104C13.473,10.023,14,8.576,14,7c0-3.866-3.134-7-7-7S0,3.134,0,7s3.134,7,7,7
+            c1.576,0,3.023-0.527,4.193-1.404L14.3,15.7c0.185,0.184,0.38,0.3,0.7,0.3c0.553,0,1-0.447,1-1C16,14.781,15.945,14.546,15.7,14.3z
+            M2,7c0-2.762,2.238-5,5-5s5,2.238,5,5s-2.238,5-5,5S2,9.762,2,7z"/>
+           </svg>
+           <input type="text" placeholder="Поиск по сайту"> 
+        </label>
+       </form>
+      <ul class="login">
         <li>
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+          <a href="#" class="login__link">
+           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
-            <path fill="#272525" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
-            C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
-          </svg>
-          Войти
-        </li>
+               <path fill="#272525" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
+             C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
+           </svg>
+           Войти
+          </a>
+       </li>
       </ul>
-      <ul>
+      <ul class="basket-list">
         <li>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-              width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
-              <rect x="8" y="2" width="1.984" height="8"/>
-              <rect y="3" width="1.984" height="7"/>
-              <rect x="4" width="2" height="10"/>
-            </svg>
-            Сравнить
-        </li>
+          <a href="#">
+           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
+             <rect x="8" y="2" width="1.984" height="8"/>
+             <rect y="3" width="1.984" height="7"/>
+             <rect x="4" width="2" height="10"/>
+           </svg>
+           Сравнить
+          </a>
+       </li>
         <li>
-          <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-            width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
-            <g>
-            <path d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
-            c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
-            c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
-            c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
-          <path d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
-            c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
-            C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
-          </g>
-          </svg> 
-          Корзина
-        </li>
+         <a href="#"> 
+           <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+             width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
+             <g>
+             <path d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
+             c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
+             c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
+             c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
+           <path d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
+             c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
+             C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
+           </g>
+           </svg> 
+           Корзина
+         </a>
+       </li>
       </ul>
-      <nav>
+      <nav class="header-nav">
         <ul>
-          <li>каталог товаров</li>
-          <li>доставка</li>
-          <li>гарантии</li>
-          <li>контакты</li>
+          <li><a href="#">каталог товаров</a></li>
+          <li><a href="#">доставка</a></li>
+          <li><a href="#">гарантии</a></li>
+          <li><a href="#">контакты</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section>
-        <h1>Моноподы для селфи</h1>
-        <ul>
+        <h1 class="catalog-title">Моноподы для селфи</h1>
+        <ul class="breadcrumbs">
           <li>
-            <a href="index.html">Главная</a>
+            <a href="index.html" class="breadcrumbs__link">Главная</a>
           </li>
           <li>
-            <a href="#">Каталог</a>
+            <a href="#" class="breadcrumbs__link">Каталог</a>
           </li>
           <li>
-            <a href="#">Моноподы для селфи</a>
+            <a href="#" class="breadcrumbs__link">Моноподы для селфи</a>
           </li>
         </ul>
-        <div>
-          <h2>Фильтры</h2>
-          <h3>Цвет</h3>
-          <ul>
-            <li>Черный</li>
-            <li>Белый</li>
-            <li>Синий</li>
-            <li>Красный</li>
-            <li>Розовый</li>
-          </ul>
-          <h3>Bluetooth</h3>
-          <ul>
-            <li>Есть</li>
-            <li>Нет</li>
-          </ul>
-          <button type="button">показать</button>
+        <div class="filter">
+          <h2 class="filter-title">Фильтр</h2>
+          <fieldset>
+            <legend class="color-title">Цвет</legend>
+            <ul>
+              <li>
+                <label>
+                  <input type="checkbox" name="black" checked>
+                  Черный
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="white" >
+                  Белый
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="blue" checked>
+                  Синий
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="red" checked>
+                  Красный
+                </label>
+              </li>
+              <li>
+                <label>
+                  <input type="checkbox" name="pink" >
+                  Розовый
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Bluetooth</legend>
+            <ul>
+              <li>
+                <label>
+                <input type="radio" name="Bluetooth" value="yes" checked>
+                Есть
+                </label>
+              </li>
+              <li>
+                <label>
+                <input type="radio" name="Bluetooth" value="no">
+                Нет
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <button type="button" class="btn">показать</button>
         </div>
-        <div>
-          <h2>Каталог товаров</h2>
+        <div class="features">
+          <h2 class="visually-hidden">Каталог товаров</h2>
           <ul>
             <li>
               <img src="img/product1.jpg" width="360px" height="380px" alt="фото товара">
-              <h3>Любительская селфи-палка</h3>
-              <span>500 руб.</span>
+              <h3 class="features__title">Любительская селфи-палка</h3>
+              <span class="price">500 руб.</span>
             </li>
             <li>
               <img src="img/product2.jpg" width="360px" height="380px" alt="фото товара">
-              <h3>Профессиональная селфи-палка</h3>
-              <span>1500 руб.</span>
+              <h3 class="features__title">Профессиональная селфи-палка</h3>
+              <span class="price">1500 руб.</span>
             </li>
             <li>
               <img src="img/product3.jpg" width="360px" height="380px" alt="фото товара">
-              <h3>Непотопляемая селфи-палка</h3>
-              <span>2500 руб.</span>
+              <h3 class="features__title">Непотопляемая селфи-палка</h3>
+              <span class="price">2500 руб.</span>
             </li>
             <li>
               <img src="img/product4.jpg" width="360px" height="380px" alt="фото товара">
-              <h3>Селфи-палка «Следуй за мной»</h3>
-              <span>4900 руб.</span>
+              <h3 class="features__title">Селфи-палка «Следуй за мной»</h3>
+              <span class="price">4900 руб.</span>
             </li>
           </ul>
         </div>
       </section>
     </main>
-    <footer>
-    <img src="img/logo-yellow.png" alt="логотип магазина">
-    <ul>
-        <li>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-        width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
-          <path fill="#ffc600" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
-          C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
-        </svg>
-        Войти
-      </li>
-      </ul>
-      <ul>
-        <li>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
-          <rect x="8" y="2" width="1.984" height="8" fill="#ffc600"/>
-          <rect y="3" width="1.984" height="7" fill="#ffc600"/>
-          <rect x="4" width="2" height="10" fill="#ffc600"/>
-        </svg>
-        Сравнить
+    <footer class="footer">
+      <img src="img/logo-yellow.png" alt="логотип магазина">
+      <ul class="footer__login">
+         <li>
+          <a href="#" class="footer__login__link">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
+              <path fill="#ffc600" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
+              C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
+            </svg>
+            Войти
+          </a>
         </li>
-        <li>
-        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-          width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
-          <g>
-          <path fill="#ffc600" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
-          c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
-          c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
-          c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
-          <path fill="#ffc600" d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
-          c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
-          C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
-          </g>
-        </svg>            
-        Корзина
-      </li>
-      </ul>
-      <address>г.Москва, ул.Строителей, 15</address>
-      <nav>
-        <ul>
-          <li>доставка</li>
-          <li>гарантии</li>
-          <li>контакты</li>
+       </ul>
+       <ul class="footer__basket-list">
+         <li>
+          <a href="#">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
+              <rect x="8" y="2" width="1.984" height="8" fill="#ffc600"/>
+              <rect y="3" width="1.984" height="7" fill="#ffc600"/>
+              <rect x="4" width="2" height="10" fill="#ffc600"/>
+            </svg>
+            Сравнить
+          </a>
+         </li>
+         <li>
+          <a href="#">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
+              <g>
+              <path fill="#ffc600" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
+              c-0.594,0-1.078-0.458-1.078-1.022V2.863H4.909V4.09c0,0.563-0.485,1.022-1.08,1.022c-0.595,0-1.078-0.458-1.078-1.022V2.863H0.438
+              c-0.125,0-0.243,0.056-0.327,0.154C0.028,3.115-0.012,3.245,0.003,3.375l0.776,7.134c0.015,0.806,0.642,1.455,1.411,1.455h7.595
+              c0.77,0,1.396-0.649,1.411-1.455l0.776-7.134C11.987,3.245,11.946,3.115,11.864,3.017z"/>
+            <path fill="#ffc600" d="M3.829,4.499c0.239,0,0.433-0.184,0.433-0.409V1.84c0-0.632,0.672-1.022,1.295-1.022h1.079
+              c0.655,0,1.078,0.401,1.078,1.022v2.25c0,0.225,0.194,0.409,0.431,0.409c0.239,0,0.433-0.184,0.433-0.409V1.84
+              C8.577,0.773,7.761,0,6.636,0H5.557C4.367,0,3.398,0.826,3.398,1.84v2.25C3.398,4.315,3.592,4.499,3.829,4.499z"/>
+            </g>
+            </svg>            
+            Корзина
+          </a>
+        </li>
+       </ul>
+       <address class="address">г.Москва, ул.Строителей, 15</address>
+       <nav class="footer-nav">
+         <ul>
+           <li><a href=#>доставка</a></li>
+           <li><a href=#>гарантии</a></li>
+           <li><a href=#>контакты</a></li>
+         </ul>
+       </nav>
+       <a href="tel:+74954959595" class="tel">Тел.: +7(495)495-95-95</a>
+       <ul class="socials">
+          <li class="fb">
+            <a href="#">
+              <img src="img/fb.png" width="32px" height="32px" alt="иконка Фейсбук">
+              <span class="visually-hidden">Фейсбук</span>
+            </a>
+          </li>
+          <li class="inst">
+            <a href="#">
+              <img src="img/insta.png" width="32px" height="32px" alt="иконка Инстаграм">
+              <span class="visually-hidden">Инстаграм</span>
+            </a>
+          </li>
+          <li class="twit">
+            <a href="#">
+              <img src="img/Twitter.png" width="32px" height="32px" alt="иконка Твиттер">
+              <span class="visually-hidden">Твиттер</span>
+            </a>
+          </li>
         </ul>
-      </nav>
-      <a href="tel:+74954959595">Тел.: +7(495)495-95-95</a>
-      <ul>
-        <li>
-          <a href="#">
-            <img src="img/fb.svg" width="32px" height="32px" alt="иконка Фейсбук">
-            Фейсбук
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="img/insta.svg" width="32px" height="32px" alt="иконка Инстаграм">
-            Инстаграм
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <img src="img/Twitter.svg" width="32px" height="32px" alt="иконка Твиттер">
-            Твиттер
-          </a>
-        </li>
-      </ul>
-      <a href="https://htmlacademy.ru/intensive/htmlcss">
-        <img src="img/logo-html.svg" alt="логотип HTML академии">
-      </a>
+        <a href="https://htmlacademy.ru/intensive/htmlcss">
+          <img src="img/logo-html.png" alt="логотип HTML академии" aria-label="cссылка на сайт HTML ACADEMY">
+        </a>
     </footer>
   </body>
 </html>
