--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       </a>
       <div class="heder-string">
         <form class="search" aria-label="Поиск по сайту">
-          <label>
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
             width="16px" height="16px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
             <path d="M15.7,14.3l-3.104-3.104C13.473,10.023,14,8.576,14,7c0-3.866-3.134-7-7-7S0,3.134,0,7s3.134,7,7,7
             c1.576,0,3.023-0.527,4.193-1.404L14.3,15.7c0.185,0.184,0.38,0.3,0.7,0.3c0.553,0,1-0.447,1-1C16,14.781,15.945,14.546,15.7,14.3z
@@ -23,13 +22,11 @@
             <div class="search__send">
               <button class="search__send__btn">Найти</button>
             </div>
-          </label>
-
         </form>
         <ul class="login">
           <li>
             <a href="#" class="login__link">
-              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+              <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                 width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
                   <path fill="#272525" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
                 C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
@@ -41,7 +38,7 @@
         <ul class="basket-list">
           <li>
             <a href="#">
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
               <rect x="8" y="2" width="1.984" height="8"/>
               <rect y="3" width="1.984" height="7"/>
@@ -52,7 +49,7 @@
         </li>
           <li>
           <a href="#"> 
-            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
               width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
               <g>
               <path d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
@@ -103,30 +100,31 @@
     </header>
     <main>
       <section class="slider container">
-          <input type="radio" name="slider" checked class="visually-hidden" id="slide1">
-          <input type="radio" name="slider" class="visually-hidden" id="slide2">
-          <input type="radio" name="slider" class="visually-hidden" id="slide3">
-          <ul class="slider-list">
-              <li class="slider-list__item">
-                <label for="slide1">
-                  <span class="slider-indicator slider-indicator1"></span>
+        <h2 class="visually-hidden">Слайдер</h2>
+        <input type="radio" name="slider" checked class="visually-hidden" id="slide1">
+        <input type="radio" name="slider" class="visually-hidden" id="slide2">
+        <input type="radio" name="slider" class="visually-hidden" id="slide3">
+        <ul class="slider-list">
+            <li class="slider-list__item">
+              <label for="slide1">
+                <span class="slider-indicator slider-indicator1"></span>
+              </label>
+          </li>
+            <li class="slider-list__item">
+              <label for="slide2">
+                  <span class="slider-indicator slider-indicator2"></span>
                 </label>
             </li>
-              <li class="slider-list__item">
-                <label for="slide2">
-                    <span class="slider-indicator slider-indicator2"></span>
-                  </label>
-              </li>
-              <li class="slider-list__item">
-                <label for="slide3">
-                    <span class="slider-indicator slider-indicator3"></span>
-                  </label>
-              </li>
-          </ul>
+            <li class="slider-list__item">
+              <label for="slide3">
+                  <span class="slider-indicator slider-indicator3"></span>
+                </label>
+            </li>
+        </ul>
         <div class="slider1">
           <div class="flex">
             <div class="slider-left">
-                <img src="img/slider-1.png" alt="фото палки для селфи" width="384px" height="486px">
+              <img src="img/slider-1.png" alt="фото палки для селфи" width="384" height="486">
             </div>
             <div class="slider-right">
               <p class="slider-desc desc1">
@@ -159,7 +157,7 @@
         <div class="slider2">
           <div class="flex">
             <div class="slider-left">
-                <img src="img/slider-2.png" alt="фото палки для селфи" width="384px" height="486px">
+                <img src="img/slider-2.png" alt="фото палки для селфи" width="384" height="486">
             </div>
             <div class="slider-right">
               <p class="slider-desc desc2">
@@ -185,7 +183,7 @@
         <div class="slider3">
           <div class="flex">
             <div class="slider-left">
-                <img class="slider3__img" src="img/slider-3.png" alt="фото палки для селфи" width="526px" height="334px">
+                <img class="slider3__img" src="img/slider-3.png" alt="фото палки для селфи" width="526" height="334">
             </div>
             <div class="slider-right">
               <p class="slider-desc desc3">
@@ -214,31 +212,38 @@
         </div> 
       </section>
       <section class="products container">
+          <h2 class="visually-hidden">Список товаров</h2>
         <ul class="products__list">
           <li class="products__item">
-            <a href="#" class="products__img products__img1"></a>
-            <span>Виртуальная реальность</span>
+            <a href="#" class="products__img products__img1">
+              <span>Виртуальная реальность</span>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" class="products__img products__img2"></a>
-            <span>Моноподы<br>
-            для селфи</span>
+            <a href="#" class="products__img products__img2">
+              <span>Моноподы<br>
+              для селфи</span>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" class="products__img products__img3"></a>
-            <span>Экшн-камеры</span>
+            <a href="#" class="products__img products__img3">
+              <span>Экшн-камеры</span>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" class="products__img products__img4"></a>
-            <span>Фитнес-браслеты</span>
+            <a href="#" class="products__img products__img4">
+              <span>Фитнес-браслеты</span>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" class="products__img products__img5"></a>
-           <span>Умные часы</span>
+            <a href="#" class="products__img products__img5">
+             <span>Умные часы</span>
+            </a>
           </li>
           <li class="products__item">
-            <a href="#" class="products__img products__img6"></a>
-           <span>Квадрокоптеры</span>
+            <a href="#" class="products__img products__img6">
+             <span>Квадрокоптеры</span>
+            </a>
           </li>
         </ul>
       </section>
@@ -269,7 +274,8 @@
         </div>
       </section>
       <section class="partners container">
-        <ul class="partners-list" aria-label="список партнеров">
+        <h2 class="visually-hidden">Партнеры</h2>
+        <ul class="partners-list">
           <li class="partners-item dgi">
           </li>
           <li class="partners-item sp">
@@ -304,7 +310,7 @@
             <button class="map-btn">
               <img src="img/map.png" alt="адрес магазина, г.Москва, ул.Строителей, 15">
             </button>
-            <button type="button" class="btn write-us-btn">напишите нам</button> 
+            <button class="btn write-us-btn">напишите нам</button> 
           </div>
       </section>      
     </main>
@@ -323,7 +329,7 @@
               <li><a href=#>контакты</a></li>
             </ul>
           </nav>
-          <ul class="socials">`
+          <ul class="socials">
             <li class="fb">
               <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
@@ -334,7 +340,7 @@
             </li>
             <li class="inst">
               <a href="#">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   width="32px" height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
                <g>
                  <path fill="#7e7e7e" d="M20.916,16c0,2.728-2.211,4.938-4.938,4.938S11.039,18.728,11.039,16c0-0.394,0.051-0.773,0.138-1.14
@@ -355,7 +361,7 @@
               <a href="#">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="32px"
                     height="32px" viewBox="0 0 32 32" enable-background="new 0 0 32 32" xml:space="preserve">
-                  <g id="Layer_1">
+                  <g>
                   </g>
                   <g id="Layer_2">
                     <path fill="#7e7e7e" d="M16,0C7.164,0,0,7.164,0,16c0,8.837,7.164,16,16,16c8.837,0,16-7.163,16-16C32,7.164,24.837,0,16,0z
@@ -377,7 +383,7 @@
             <ul class="footer__login">
               <li>
                 <a href="#" class="footer__login__link">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   width="13px" height="12px" viewBox="0 0 13 12" enable-background="new 0 0 13 12" xml:space="preserve">
                     <path fill="#ffc600" d="M0.032,12h12.937c-0.163-2.643-2.074-4.837-4.671-5.543C9.306,5.846,9.985,4.75,9.985,3.485
                     C9.985,1.561,8.425,0,6.5,0S3.015,1.561,3.015,3.485c0,1.264,0.68,2.361,1.688,2.972C2.106,7.163,0.194,9.357,0.032,12z"/>
@@ -389,7 +395,7 @@
             <ul class="footer__basket-list">
               <li>
                 <a href="#">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     width="10px" height="10px" viewBox="0 0 10 10" enable-background="new 0 0 10 10" xml:space="preserve">
                     <rect x="8" y="2" width="1.984" height="8" fill="#ffc600"/>
                     <rect y="3" width="1.984" height="7" fill="#ffc600"/>
@@ -400,7 +406,7 @@
               </li>
               <li>
                 <a href="#">
-                  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                  <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     width="12px" height="12px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" xml:space="preserve">
                     <g>
                     <path fill="#ffc600" d="M11.864,3.017c-0.082-0.098-0.203-0.154-0.327-0.154H9.225V4.09c0,0.563-0.484,1.022-1.08,1.022
@@ -426,27 +432,27 @@
       <h2 class="visually-hidden">Форма обратной связи</h2>
       <form action="https://echo.htmlacademy.ru" method="POST" class="feedback__form">
         <div class="flex">
-          <label>
+          <div>
             <p class="feedback-decs">Ваше имя:</p>
             <input class="feedback-input feedback-input-name" type="text" placeholder="Имя Фамилия">
-          </label>
-          <label>
+          </div>
+          <div>
               <p class="feedback-decs">Ваш e-mail:</p>
             <input class="feedback-input feedback-input-email" type="email" placeholder="email@example.com">
-          </label>
+          </div>
         </div>
-        <label>
+        <div>
             <p class="feedback-decs">Текст письма</p>
           <textarea class="feedback-textarea" placeholder="В свободной форме"></textarea>
-        </label>
+        </div>
         <button class="btn">отправить</button>
-        <btn class="feedback-close"></btn>
+        <button class="feedback-close"></button>
       </form>
     </section>
     <section class="modal-map">
       <h2 class="visually-hidden">Как до нас добраться</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1571082619980!5m2!1sru!2sru" width="960px" height="560px" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-      <btn class="map-close"></btn>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2249.1125488779976!2d37.52742931592807!3d55.687030980535816!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54cf65f5c8955%3A0x694710ccd55501e!2z0YPQuy4g0KHRgtGA0L7QuNGC0LXQu9C10LksIDE1LCDQnNC-0YHQutCy0LAsIDExOTMxMQ!5e0!3m2!1sru!2sru!4v1571082619980!5m2!1sru!2sru" width="960" height="560" style="border:0;" allowfullscreen=""></iframe>
+      <button class="map-close"></button>
     </section>
     <script src="js/WriteUs.js"></script>
     <script src="js/map.js"></script>
