--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете проверить работоспособность покупки. Всякое бывает.
             </p>
             <button class="map-btn">
-              <img src="img/map.png" alt="адрес магазина, г.Москва, ул.Строителей, 15">
+              <img src="img/map.png" width="560" height="222" alt="адрес магазина, г.Москва, ул.Строителей, 15">
             </button>
             <button class="btn write-us-btn">напишите нам</button> 
           </div>
